--- a/24-07.html
+++ b/24-07.html
@@ -10,7 +10,7 @@
         <details>
           <summary>Video 1</summary>
           <video width="400" autoplay muted loop>
-            <source src="./video.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
           </video>
         </details>
       </td>
@@ -18,7 +18,7 @@
         <details>
           <summary>Video 2</summary>
           <video width="400" autoplay muted loop>
-            <source src="./video.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
           </video>
         </details>
       </td>
@@ -26,7 +26,7 @@
         <details>
           <summary>Video 3</summary>
           <video width="400" autoplay muted loop>
-            <source src="./video.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
           </video>
         </details>
       </td>
@@ -34,7 +34,7 @@
         <details>
           <summary>Video 4</summary>
           <video width="400" autoplay muted loop>
-            <source src="./video.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
           </video>
         </details>
       </td>
@@ -44,7 +44,7 @@
         <details>
           <summary>Video 5</summary>
           <video width="400" autoplay muted loop>
-            <source src="./video.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
           </video>
         </details>
       </td>
@@ -52,7 +52,7 @@
         <details>
           <summary>Video 6</summary>
           <video width="400" autoplay muted loop>
-            <source src="./video.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
           </video>
         </details>
       </td>
@@ -60,7 +60,7 @@
         <details>
           <summary>Video 7</summary>
           <video width="400" autoplay muted loop>
-            <source src="video7.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
           </video>
         </details>
       </td>
@@ -68,7 +68,7 @@
         <details>
           <summary>Video 8</summary>
           <video width="400" autoplay muted loop>
-            <source src="./video.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
           </video>
         </details>
       </td>
@@ -78,7 +78,7 @@
         <details>
           <summary>Video 9</summary>
           <video width="400" autoplay muted loop>
-            <source src="video9.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
           </video>
         </details>
       </td>
@@ -86,7 +86,7 @@
         <details>
           <summary>Video 10</summary>
           <video width="400" autoplay muted loop>
-            <source src="./video.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
           </video>
         </details>
       </td>
@@ -94,7 +94,7 @@
         <details>
           <summary>Video 11</summary>
           <video width="400" autoplay muted loop>
-            <source src="./video.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
           </video>
         </details>
       </td>
@@ -102,7 +102,7 @@
         <details>
           <summary>Video 12</summary>
           <video width="400" autoplay muted loop>
-            <source src="./video.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
           </video>
         </details>
       </td>
@@ -112,7 +112,7 @@
         <details>
           <summary>Video 13</summary>
           <video width="400" autoplay muted loop>
-            <source src="./video.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
           </video>
         </details>
       </td>
@@ -120,7 +120,7 @@
         <details>
           <summary>Video 14</summary>
           <video width="400" autoplay muted loop>
-            <source src="video14.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
           </video>
         </details>
       </td>
@@ -128,7 +128,7 @@
         <details>
           <summary>Video 15</summary>
           <video width="400" autoplay muted loop>
-            <source src="./video.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
           </video>
         </details>
       </td>
@@ -136,7 +136,7 @@
         <details>
           <summary>Video 16</summary>
           <video width="400" autoplay muted loop>
-            <source src="./video.mp4" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
           </video>
         </details>
       </td>
